src/com/haskforce/Cabal.bnf
{
  parserClass="com.haskforce.cabal.CabalParser"
  elementTypeHolderClass="com.haskforce.cabal.psi.CabalTypes"
  psiClassPrefix="Cabal"
  psiImplClassSuffix="Impl"
  psiPackage="com.haskforce.cabal.psi"
  psiImplPackage="com.haskforce.cabal.psi.impl"
  tokens=[
    comment='regexp:--([^\^\r\n][^\r\n]*|[\r\n])'
    varidRegexp="regexp:[a-zA-Z_0-9.']*"
    crlf='regexp:([\r\n])'
  ]
}

cabal ::= keyOrConfig*

conditional ::= "if"

library ::= "library" [simplekey]

executable ::= "executable" varid [simplekey]

flag ::= "flag" varid [simplekey]

config ::= (library | executable | flag )

keyOrConfig ::= key | config

key ::= simplekey | complexkey

simplekeyname ::= ("name" | "version" | "synopsis" | "author" | "maintainer" | "category" | "build-type" | "cabal-version")

complexkeyname ::= ("extra-source-files" | "build-depends" | "exposed-modules" | "other-extensions" | "other-modules" )

varid ::= varidRegexp

colon ::= ":"

simplekey ::= simplekeyname colon varid

complexkey ::= complexkeyname colon <<commaSeparate varid>>

private meta commaSeparate ::= <<p>> (',' <<p>>)* {pin(".*")=1}
